Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16276

QmlProfiler: Crash during loading qml trace when QmlJSTools plugin is not loaded

    XMLWordPrintable

Details

    • 070897091ac12d01db3f6230e3e9c3af0507cfe5

    Description

      When the QmlJSTools plugin is not loaded, and I load a QML trace in the QML Profiler, it loads a bit and then:

      .  0  Id: 2680.24d0 Suspend: 1 Teb: 7ea5e000 Unfrozen
      ChildEBP RetAddr  
      00decd34 04d16df6 QmlJSd!QmlJS::ModelManagerInterface::updateSourceFiles(class QStringList * files = 0x07c4d79c, bool emitDocumentOnDiskChanged = false)+0xc [c:\users\aportale\dev\qt-creator\src\libs\qmljs\qmljsmodelmanagerinterface.cpp @ 299]
      00decd48 04d14aaa QmlProfilerd!QmlProfiler::Internal::QmlProfilerDetailsRewriter::reloadDocuments(void)+0x36 [c:\users\aportale\dev\qt-creator\src\plugins\qmlprofiler\qmlprofilerdetailsrewriter.cpp @ 155]
      00decd54 04d12ab4 QmlProfilerd!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (<function> * f = 0x04d16dc0, class QmlProfiler::Internal::QmlProfilerDetailsRewriter * o = 0x07c4d670, void ** arg = 0x00dece5c)+0xa [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 501]
      00decd68 04d1561e QmlProfilerd!QtPrivate::FunctionPointer<void (<function> * f = 0x04d16dc0, class QmlProfiler::Internal::QmlProfilerDetailsRewriter * o = 0x07c4d670, void ** arg = 0x00dece5c)+0x14 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 520]
      00decd90 514e015f QmlProfilerd!QtPrivate::QSlotObject<void (int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x07a53090, class QObject * r = 0x07c4d670, void ** a = 0x00dece5c, bool * ret = 0x00000000)+0x5e [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 143]
      00decdb0 514d2b20 Qt5Cored!QtPrivate::QSlotObjectBase::call(class QObject * r = 0x07c4d670, void ** a = 0x00dece5c)+0x1f [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 124]
      00dece88 514d2621 Qt5Cored!QMetaObject::activate(class QObject * sender = 0x07b25aa0, int signalOffset = 0n3, int local_signal_index = 0n1, void ** argv = 0x00000000)+0x4f0 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3720]
      00decea0 04d63b4a Qt5Cored!QMetaObject::activate(class QObject * sender = 0x07b25aa0, struct QMetaObject * m = 0x04dde39c, int local_signal_index = 0n1, void ** argv = 0x00000000)+0x21 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3595]
      00decebc 04d10764 QmlProfilerd!QmlProfiler::QmlProfilerDataModel::requestReload(void)+0x1a [c:\users\aportale\dev\qt-creator\src\plugins\qmlprofiler\debug\moc_qmlprofilerdatamodel.cpp @ 158]
      00decee8 04d1a13f QmlProfilerd!QmlProfiler::QmlProfilerDataModel::processData(void)+0x144 [c:\users\aportale\dev\qt-creator\src\plugins\qmlprofiler\qmlprofilerdatamodel.cpp @ 237]
      00decef4 04d1c124 QmlProfilerd!QmlProfiler::QmlProfilerModelManager::acquiringDone(void)+0x3f [c:\users\aportale\dev\qt-creator\src\plugins\qmlprofiler\qmlprofilermodelmanager.cpp @ 302]
      00decf1c 04d1c8dc QmlProfilerd!<lambda_52ad3e9c8ce9369cbaf4dd91f28ae6c2>::operator()(void)+0x104 [c:\users\aportale\dev\qt-creator\src\plugins\qmlprofiler\qmlprofilermodelmanager.cpp @ 373]
      00decf28 04d1ad00 QmlProfilerd!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,<lambda_52ad3e9c8ce9369cbaf4dd91f28ae6c2> >::call(class QmlProfiler::QmlProfilerModelManager::load::__l2::<lambda_52ad3e9c8ce9369cbaf4dd91f28ae6c2> * f = 0x167eeef8, void ** arg = 0x10fd31d8)+0xc [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 495]
      00decf38 04d1cd4e QmlProfilerd!QtPrivate::Functor<<lambda_52ad3e9c8ce9369cbaf4dd91f28ae6c2>,0>::call<QtPrivate::List<>,void>(class QmlProfiler::QmlProfilerModelManager::load::__l2::<lambda_52ad3e9c8ce9369cbaf4dd91f28ae6c2> * f = 0x167eeef8, void * __formal = 0x07acb278, void ** arg = 0x10fd31d8)+0x10 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 552]
      00decf5c 514e015f QmlProfilerd!QtPrivate::QFunctorSlotObject<<lambda_52ad3e9c8ce9369cbaf4dd91f28ae6c2>,0,QtPrivate::List<>,void>::impl(int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x167eeef0, class QObject * r = 0x07acb278, void ** a = 0x10fd31d8, bool * ret = 0x00000000)+0x5e [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 192]
      00decf7c 514d9b47 Qt5Cored!QtPrivate::QSlotObjectBase::call(class QObject * r = 0x07acb278, void ** a = 0x10fd31d8)+0x1f [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 124]
      00decf94 514d4236 Qt5Cored!QMetaCallEvent::placeMetaCall(class QObject * object = 0x07acb278)+0x27 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 493]
      00ded04c 524685ab Qt5Cored!QObject::event(class QEvent * e = 0x16896b60)+0xd6 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 1257]
      00ded06c 5246479e Qt5Widgetsd!QApplicationPrivate::notify_helper(class QObject * receiver = 0x07acb278, class QEvent * e = 0x16896b60)+0x12b [c:\users\aportale\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 3804]
      00ded71c 5148f11c Qt5Widgetsd!QApplication::notify(class QObject * receiver = 0x07acb278, class QEvent * e = 0x16896b60)+0x39e [c:\users\aportale\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 3163]
      00ded75c 51497bb9 Qt5Cored!QCoreApplication::notifyInternal2(class QObject * receiver = 0x07acb278, class QEvent * event = 0x16896b60)+0xec [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1015]
      00ded76c 514903c6 Qt5Cored!QCoreApplication::sendEvent(class QObject * receiver = 0x07acb278, class QEvent * event = 0x16896b60)+0x29 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.h @ 225]
      00ded7f8 51524454 Qt5Cored!QCoreApplicationPrivate::sendPostedEvents(class QObject * receiver = 0x00000000, int event_type = 0n0, class QThreadData * data = 0x010ceb28)+0x346 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1650]
      *** WARNING: Unable to verify checksum for C:\Users\aportale\dev\qt5\qtbase\plugins\platforms\qwindowsd.dll
      DBGHELP: qwindowsd - private symbols & lines 
              C:\Users\aportale\dev\qt5\qtbase\plugins\platforms\qwindowsd.pdb
      00ded814 5020fa50 Qt5Cored!QEventDispatcherWin32::sendPostedEvents(void)+0x24 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 1287]
      00ded820 51522806 qwindowsd!QWindowsGuiEventDispatcher::sendPostedEvents(void)+0x10 [c:\users\aportale\dev\qt5\qtbase\src\platformsupport\eventdispatchers\qwindowsguieventdispatcher.cpp @ 76]
      00ded8d4 77308e71 Qt5Cored!qt_internal_proc(struct HWND__ * hwnd = 0x011a05de 0+0+137x36 'QEventDispatcherWin32_Internal_Widget1360644807', unsigned int message = 0x401, unsigned int wp = 0, long lp = 0n0)+0x3e6 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 438]
      WARNING: Stack unwind information not available. Following frames may be wrong.
      00ded900 773090d1 USER32!CallNextHookEx+0xb1
      00ded994 7730a62a USER32!CallNextHookEx+0x311
      00deda08 7730a680 USER32!GetMessageW+0x38a
      00deda14 51523186 USER32!DispatchMessageW+0x10
      00def824 5020fa28 Qt5Cored!QEventDispatcherWin32::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x646 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 838]
      00def83c 5148ab5c qwindowsd!QWindowsGuiEventDispatcher::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x28 [c:\users\aportale\dev\qt5\qtbase\src\platformsupport\eventdispatchers\qwindowsguieventdispatcher.cpp @ 68]
      00def854 5148ad67 Qt5Cored!QEventLoop::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x4c [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qeventloop.cpp @ 129]
      00def8b8 5148d452 Qt5Cored!QEventLoop::exec(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x157 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qeventloop.cpp @ 204]
      *** WARNING: Unable to verify checksum for C:\Users\aportale\dev\qt5\qtbase\lib\Qt5Guid.dll
      DBGHELP: Qt5Guid - private symbols & lines 
              C:\Users\aportale\dev\qt5\qtbase\lib\Qt5Guid.pdb
      00def918 51cf6748 Qt5Cored!QCoreApplication::exec(void)+0x132 [c:\users\aportale\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1285]
      00def920 524643f9 Qt5Guid!QGuiApplication::exec(void)+0x18 [c:\users\aportale\dev\qt5\qtbase\src\gui\kernel\qguiapplication.cpp @ 1608]
      *** WARNING: Unable to verify checksum for qtcreator.exe
      DBGHELP: qtcreator - private symbols & lines 
              C:\Users\aportale\dev\qt-creator\bin\qtcreator.pdb
      00def928 009180e7 Qt5Widgetsd!QApplication::exec(void)+0x9 [c:\users\aportale\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 2980]
      00defec8 0091daad qtcreator!main(int argc = 0n3, char ** argv = 0x010c1370)+0x2947 [c:\users\aportale\dev\qt-creator\src\app\main.cpp @ 527]
      00defefc 0091c23e qtcreator!WinMain(struct HINSTANCE__ * __formal = 0x00910000, struct HINSTANCE__ * __formal = 0x00000000, char * __formal = 0x010b7ac3 "-settingspath c:\temp\foobar11", int __formal = 0n10)+0xad [c:\users\aportale\dev\qt5\qtbase\src\winmain\qtmain_win.cpp @ 113]
      00deff14 0091c10a qtcreator!invoke_main(void)+0x1e [f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl @ 99]
      00deff6c 0091bfad qtcreator!__scrt_common_main_seh(void)+0x15a [f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl @ 255]
      00deff74 0091c248 qtcreator!__scrt_common_main(void)+0xd [f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl @ 300]
      00deff7c 75457c04 qtcreator!WinMainCRTStartup(void)+0x8 [f:\dd\vctools\crt\vcstartup\src\startup\exe_winmain.cpp @ 17]
      00deff90 7758ab8f KERNEL32!BaseThreadInitThunk+0x24
      00deffd8 7758ab5a ntdll!RtlInitializeExceptionChain+0x8f
      00deffe8 00000000 ntdll!RtlInitializeExceptionChain+0x5a
      

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-16276
        # Subject Branch Project Status CR V

        Activity

          People

            ulherman Ulf Hermann
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes