QmlProfiler: Don't crash if there is no QmlJSModelManager

Change-Id: I63b978f0f9c42c8968da7e779cdff876c18d8f31
Task-number: QTCREATORBUG-16276
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Alessandro Portale <alessandro.portale@theqtcompany.com>